@@ -165,6 +165,7 @@ version ? (????-??-??):
   - the same networks bound to different hosts can overlap [chilan]
   - network selection for node and netdev ip addresses [chilan]
   - transaction logging for networks [chilan]
+  - fixed mysql database dump - don't check foreign key constraints during database recover [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
